; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/advapi32/extr_HKEY_CLASSES_ROOT.c_Test_DuplicateHandle.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/advapi32/extr_HKEY_CLASSES_ROOT.c_Test_DuplicateHandle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_CLASSES_ROOT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i32] [i32 67, i32 76, i32 83, i32 73, i32 68, i32 0], align 4
@KEY_READ = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@DUPLICATE_SAME_ACCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @Test_DuplicateHandle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Test_DuplicateHandle() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @HKEY_CLASSES_ROOT, align 4
  %6 = load i32, i32* @KEY_READ, align 4
  %7 = call i32 @RegOpenKeyExW(i32 %5, i8* bitcast ([6 x i32]* @.str to i8*), i32 0, i32 %6, i32** %1)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @ERROR_SUCCESS, align 4
  %10 = call i32 @ok_dec(i32 %8, i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @IS_HKCR(i32* %11)
  %13 = call i32 @ok(i32 %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %14 = call i32 (...) @GetCurrentProcess()
  %15 = load i32*, i32** %1, align 8
  %16 = call i32 (...) @GetCurrentProcess()
  %17 = ptrtoint i32** %2 to i32
  %18 = load i32, i32* @DUPLICATE_SAME_ACCESS, align 4
  %19 = call i32 @DuplicateHandle(i32 %14, i32* %15, i32 %16, i32 %17, i32 0, i32 0, i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @ok(i32 %20, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %22 = load i32*, i32** %2, align 8
  %23 = icmp ne i32* %22, null
  %24 = zext i1 %23 to i32
  %25 = call i32 @ok(i32 %24, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @IS_HKCR(i32* %26)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  %31 = call i32 @ok(i32 %30, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %32 = load i32*, i32** %1, align 8
  %33 = call i32 @RegCloseKey(i32* %32)
  %34 = load i32*, i32** %2, align 8
  %35 = call i32 @RegCloseKey(i32* %34)
  ret void
}

declare dso_local i32 @RegOpenKeyExW(i32, i8*, i32, i32, i32**) #1

declare dso_local i32 @ok_dec(i32, i32) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @IS_HKCR(i32*) #1

declare dso_local i32 @DuplicateHandle(i32, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @GetCurrentProcess(...) #1

declare dso_local i32 @RegCloseKey(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
